--- a/W1030_MVC_ActionFilter/Web.config
+++ b/W1030_MVC_ActionFilter/Web.config
@@ -63,39 +63,24 @@
   <log4net>
     <root>
       <level value="DEBUG" />
-      <appender-ref ref="RollingFileAppender_INFO" />
-      <appender-ref ref="RollingFileAppender_ERROR" />
     </root>
-    <!--  DEBUG  与  INFO  写在一起.  -->
-    <appender name="RollingFileAppender_INFO" type="log4net.Appender.RollingFileAppender">
+
+    <!-- 超时日志. -->
+    <logger name="TIMEOUT">
+      <level value="DEBUG" />
+      <appender-ref ref="RollingFileAppender_Timeout" />
+    </logger>
+    <appender name="RollingFileAppender_Timeout" type="log4net.Appender.RollingFileAppender">
       <file value="LogFile\" />
       <appendToFile value="true" />
       <rollingStyle value="Date" />
-      <datePattern value="yyyyMM\\&quot;Log_INFO_&quot;yyyyMMdd&quot;.csv&quot;" />
+      <datePattern value="yyyyMM\\&quot;Timeout_Log_&quot;yyyyMMdd&quot;.csv&quot;" />
       <staticLogFileName value="false" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="&quot;%date{yyyy'-'MM'-'dd HH':'mm':'ss'.'fff}&quot;,&quot;%level&quot;,&quot;%logger&quot;,&quot;%message&quot;%newline" />
+        <conversionPattern value="&quot;%date{yyyy'-'MM'-'dd HH':'mm':'ss'.'fff}&quot;,&quot;%level&quot;,&quot;%message&quot;%newline" />
       </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <param name="LevelMax" value="INFO" />
-        <param name="LevelMin" value="DEBUG" />
-      </filter>
     </appender>
-    <!--  WARN 与 ERROR   写在一起.  -->
-    <appender name="RollingFileAppender_ERROR" type="log4net.Appender.RollingFileAppender">
-      <file value="LogFile\" />
-      <appendToFile value="true" />
-      <rollingStyle value="Date" />
-      <datePattern value="yyyyMM\\&quot;Log_ERROR_&quot;yyyyMMdd&quot;.csv&quot;" />
-      <staticLogFileName value="false" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="&quot;%date{yyyy'-'MM'-'dd HH':'mm':'ss'.'fff}&quot;,&quot;%level&quot;,&quot;%logger&quot;,&quot;%message&quot;%newline" />
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <param name="LevelMax" value="ERROR" />
-        <param name="LevelMin" value="WARN" />
-      </filter>
-    </appender>
+    
   </log4net>
 
 
