--- a/W1050_Mvc5/packages.config
+++ b/W1050_Mvc5/packages.config
@@ -25,5 +25,9 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="RxJS-Binding" version="2.2.0" targetFramework="net45" />
+  <package id="RxJS-Bridges-jQuery" version="1.1.6" targetFramework="net45" />
+  <package id="RxJS-Lite" version="2.2.5" targetFramework="net45" />
+  <package id="RxJS-Main" version="2.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
