W1050_Mvc5 Update Typescript and gulp test use

--- a/W1050_Mvc5/Scripts/.gitignore
+++ b/W1050_Mvc5/Scripts/.gitignore
@@ -12,3 +12,9 @@
 
 /myTestPromise.js
 /myTestPromise.js.map
+
+/myTestInterface.js
+/myTestInterface.js.map
+
+/myTestNameSpace.js
+/myTestNameSpace.js.map
