W1050_Mvc5 Add fetch sample

--- a/W1050_Mvc5/W1050_Mvc5.csproj
+++ b/W1050_Mvc5/W1050_Mvc5.csproj
@@ -283,6 +283,7 @@
     <Content Include="Views\TestTypeScript\TestInterface.cshtml" />
     <Content Include="Views\TestMobile\TestNews.cshtml" />
     <Content Include="Views\TestMobile\TestImages.cshtml" />
+    <Content Include="Views\TestAjax\TestAbort.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
