--- a/C0023_OpenSsl/packages.config
+++ b/C0023_OpenSsl/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.4" targetFramework="net40" />
   <package id="System.Extended" version="3.2.16.421" targetFramework="net40" />
 </packages>
