--- a/CR_HelloWorld_Web/CR_HelloWorld_Web.csproj
+++ b/CR_HelloWorld_Web/CR_HelloWorld_Web.csproj
@@ -152,6 +152,12 @@
       <DependentUpon>testImage.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ReportFiles\TestParam.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TestParam.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ReportViewer\Empty.aspx.cs">
       <DependentUpon>Empty.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -180,6 +186,13 @@
     <Compile Include="ReportViewer\ReportViewer3.aspx.designer.cs">
       <DependentUpon>ReportViewer3.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ReportViewer\ReportViewer4.aspx.cs">
+      <DependentUpon>ReportViewer4.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ReportViewer\ReportViewer4.aspx.designer.cs">
+      <DependentUpon>ReportViewer4.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -192,6 +205,7 @@
     <Content Include="ReportViewer\ReportViewer1.aspx" />
     <Content Include="ReportViewer\ReportViewer2.aspx" />
     <Content Include="ReportViewer\ReportViewer3.aspx" />
+    <Content Include="ReportViewer\ReportViewer4.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\Default.pubxml" />
@@ -250,6 +264,10 @@
     <EmbeddedResource Include="ReportFiles\testImage.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>testImage.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportFiles\TestParam.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>TestParam.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
