W1010_Mvc_Session Update

--- a/W1010_Mvc_Session/Web.config
+++ b/W1010_Mvc_Session/Web.config
@@ -170,6 +170,11 @@
                     <conversionPattern value="%message" />
                 </layout>
             </parameter>
+
+          <filter type="log4net.Filter.LevelRangeFilter">
+            <param name="LevelMax" value="ERROR" />
+            <param name="LevelMin" value="WARN" />
+          </filter>
         </appender>
 
     </log4net>
