W1030_MVC_ActionFilter Update

--- a/W1030_MVC_ActionFilter/Web.config
+++ b/W1030_MVC_ActionFilter/Web.config
@@ -18,6 +18,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="vs:EnableBrowserLink" value="false" />
 
 
     <!-- CompressFilter 中，判断是否允许 压缩。 -->
