--- a/W1030_MVC_ActionFilter/W1030_MVC_ActionFilter.csproj
+++ b/W1030_MVC_ActionFilter/W1030_MVC_ActionFilter.csproj
@@ -120,6 +120,7 @@
     <Compile Include="ActionFilters\ETagAttribute.cs" />
     <Compile Include="ActionFilters\HelloWorldActionFilter.cs" />
     <Compile Include="ActionFilters\HelloWorldResultFilter.cs" />
+    <Compile Include="ActionFilters\NoWhitespace.cs" />
     <Compile Include="ActionFilters\SearchBotFilter.cs" />
     <Compile Include="ActionFilters\TidyHtml.cs" />
     <Compile Include="ActionFilters\TimeoutFilter.cs" />
@@ -177,6 +178,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\TestTimeout.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\TestNoWhitespace.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
