Update ConnectionStringBuilder and WebConfigurationManager use sample

--- a/A0160_SQL_Server/A0160_SQL_Server.csproj
+++ b/A0160_SQL_Server/A0160_SQL_Server.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Sample\ReadSqlServerData.cs" />
     <Compile Include="Sample\ReadWriteBinData.cs" />
     <Compile Include="Sample\UpdateByDataSet.cs" />
+    <Compile Include="Sample\UseSqlConnectionStringBuilder.cs" />
     <Compile Include="Sample\WriteSqlServerData.cs" />
   </ItemGroup>
   <ItemGroup>
