--- a/W1050_Mvc5/Web.config
+++ b/W1050_Mvc5/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -13,13 +13,22 @@
   </configSections>
   
   <connectionStrings>
-    <add name="MyTestContext" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=MyTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+    <add name="MyTestContext" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=MyTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+      providerName="System.Data.SqlClient" />
+    <add name="MyTestConfig" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=MyTest;User ID=sa;Password=123456"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="Test:UserAccountLock" value="true" />
+    <add key="Test:SaveUserLoginLog" value="true" />
+    <add key="Test:SaveUserLoginFailLog" value="true" />
+    <add key="Test:WhiteNames" value="true" />
   </appSettings>
   
   <system.web>
