--- a/W1030_Mvc_WebApi2/packages.config
+++ b/W1030_Mvc_WebApi2/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="axios.js" version="0.18.0" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="EntityFramework.zh-Hans" version="6.1.1" targetFramework="net45" />
