MVC5 404 Page Config

--- a/W1050_Mvc5/Web.config
+++ b/W1050_Mvc5/Web.config
@@ -90,7 +90,15 @@
     <handlers>
       <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
     </handlers>
+
+
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404"/>
+      <error statusCode="404" path="/TestError/PageNotFound" responseMode="ExecuteURL"/>
+    </httpErrors>
   </system.webServer>
+  
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
