--- a/A0400_String/A0400_String.csproj
+++ b/A0400_String/A0400_String.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample\RegexSample.cs" />
     <Compile Include="Sample\StringSample.cs" />
+    <Compile Include="Sample\UriSample.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
