--- a/W1030_Mvc_WebApi2/W1030_Mvc_WebApi2.csproj
+++ b/W1030_Mvc_WebApi2/W1030_Mvc_WebApi2.csproj
@@ -176,6 +176,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionFilters\I18nFilter.cs" />
+    <Compile Include="ActionFilters\WebApiLogFilter.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
