--- a/W1030_MVC_ActionFilter/W1030_MVC_ActionFilter.csproj
+++ b/W1030_MVC_ActionFilter/W1030_MVC_ActionFilter.csproj
@@ -116,6 +116,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionFilters\AddScriptFilter.cs" />
     <Compile Include="ActionFilters\CompressFilter.cs" />
     <Compile Include="ActionFilters\ETagAttribute.cs" />
     <Compile Include="ActionFilters\HelloWorldActionFilter.cs" />
@@ -181,6 +182,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\TestNoWhitespace.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\TestPartial.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
