--- a/A0151_Excel/A0151_Excel.csproj
+++ b/A0151_Excel/A0151_Excel.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NpoiSample\NpoiReadExcel.cs" />
+    <Compile Include="NpoiSample\NpoiWriteExcel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample\Common.cs" />
