--- a/W1050_Mvc5/Web.config
+++ b/W1050_Mvc5/Web.config
@@ -29,21 +29,49 @@
     <add key="Test:SaveUserLoginLog" value="true" />
     <add key="Test:SaveUserLoginFailLog" value="true" />
     <add key="Test:WhiteNames" value="true" />
+    
+    
+    
+    
+    <!-- 负载均衡标签：该数据将返回给浏览器的 Header 的 server-code 中， 客户端可以知道，当前访问的，具体是哪一台服务器。 -->
+    <add key="LoadBalancing:ServerCode" value="server01" />
+    
   </appSettings>
+  
+  
   
   <system.web>
     <!-- 注意，在Web.config中，当compilation编译的debug属性设为true时，表示项目处于调试模式，这时Bundle是不会将文件进行打包压缩的  -->
     <compilation debug="true" targetFramework="4.5" />
+    
     <httpRuntime targetFramework="4.5" />
+    
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
     <httpModules>
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
     </httpModules>
+    
     <httpHandlers>
       <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
     </httpHandlers>
+
+
+    
+    <!-- 
+    负载均衡时使用.
+    Session 使用 StateServer 模式.
+	  多台服务器上的 machineKey 一样。
+    -->
+    <machineKey 
+      validationKey="CC9C8FDF82DBBD7FA3DFA2AF3BDE7AA0B7C1A3F0" 
+      decryptionKey="DEB523CF334DF82DED5EEB749547A1216AA7AB45164DA37C" 
+      decryption="3DES" 
+      validation="SHA1"/>
+
   </system.web>
+  
+  
   
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
