--- a/A0060_Enum/A0060_Enum.csproj
+++ b/A0060_Enum/A0060_Enum.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample\EnumSample.cs" />
+    <Compile Include="Sample\EnumSample2.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
