--- a/W1050_Mvc5/Web.config
+++ b/W1050_Mvc5/Web.config
@@ -45,6 +45,12 @@
     <compilation debug="true" targetFramework="4.5" />
     
     <httpRuntime targetFramework="4.5" />
+
+
+    <authentication mode="Forms">
+      <forms loginUrl="/Account/Login" />
+    </authentication>
+    
     
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
